--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: SFPC SKETCH BLOG
 email: paigederaedt@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Works in progress created during my time at the School for Poetic Computation: Fall 2014
+description: > # this means to ignore newlines until "baseurl:"Works in progress created during my time at the School for Poetic Computation
 baseurl: "/sketch_blog" # the subpath of your site, e.g. /blog/
 url: "http://paigederaedt.github.io" # the base hostname & protocol for your site
 twitter_username: paigederaedt
