--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: SFPC SKETCH BLOG
 email: paigederaedt@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-Works in progress created during my time at the School for Poetic Computation
-baseurl: "/sketch_blog" # the subpath of your site, e.g. /blog/
+  Works in progress created during my time at the School for Poetic Computation: Fall 2014
+baseurl: "/blog" # the subpath of your site, e.g. /blog/
 url: "http://paigederaedt.github.io" # the base hostname & protocol for your site
 twitter_username: paigederaedt
 github_username:  paigederaedt
